@@ -100,8 +100,8 @@
 # endif
 #endif /* __GNUC__ */
 
-#define __MINGW32_VERSION 3.1
+#define __MINGW32_VERSION 3.2
 #define __MINGW32_MAJOR_VERSION 3
-#define __MINGW32_MINOR_VERSION 1
+#define __MINGW32_MINOR_VERSION 2
 
 #endif /* __MINGW_H */
